--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -1,28 +1,72 @@
 <p-panel header="Danh sách sản phẩm">
-    <div class="grid">
-        <div class="col-4">4</div>
-        <div class="col-8">8</div>
+  <!--Filter (search panel)-->
+  <div class="grid">
+    <div class="col-4">
+      <button pButton type="button"(click)="showAddModal()" icon="fa fa-plus" iconPos="left" label="Thêm mới"></button>
+    </div>
+    <div class="col-8">
+      <div class="formgroup-inline">
+        <div class="field">
+          <label for="txt-keyword"  class="p-sr-only">Từ khóa</label>
+          <input id="txt-keyword" pInputText type="text" placeholder="Gõ từ khóa" />
+        </div>
+        <div class="field">
+          <p-dropdown
+            [options]="productCategories"
+            [(ngModel)]="categoryId"
+            placeholder="Chọn danh mục"
+          ></p-dropdown>
+        </div>
+        <button
+          type="button"
+          pButton
+          (click)="loadData()"
+          icon="fa fa-search"
+          iconPos="left"
+          label="Tìm"
+        ></button>
       </div>
-    <p-table #pnl [value]="items">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>Vin</th>
-                <th>Year</th>
-                <th>Brand</th>
-                <th>Color</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-car>
-            <tr>
-                <td>{{car.vin}}</td>
-                <td>{{car.year}}</td>
-                <td>{{car.brand}}</td>
-                <td>{{car.color}}</td>
-            </tr>
-        </ng-template>
-    </p-table>
-    <p-paginator [rows]="10" [totalRecords]="120" [rowsPerPageOptions]="[10,20,30]"></p-paginator>
+    </div>
+  </div>
 
-    <p-blockUI [blocked]="blockedPanel" [target]="pnl"></p-blockUI>
-
+  <!--Table-->
+  <p-table #pnl [value]="items">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Mã</th>
+        <th>SKU</th>
+        <th>Tên</th>
+        <th>Loại</th>
+        <th>Tên danh mục</th>
+        <th>Thứ tự</th>
+        <th>Hiển thị</th>
+        <th>Kích hoạt</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-row>
+      <tr>
+        <td>{{ row.code }}</td>
+        <td>{{ row.sku }}</td>
+        <td>{{ row.name }}</td>
+        <td>{{ row.productType }}</td>
+        <td>{{ row.categoryId }}</td>
+        <td>{{ row.sortOrder }}</td>
+        <td>{{ row.visibility }}</td>
+        <td>{{ row.isActive }}</td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="summary">
+      <div style="text-align: left">Tổng số bản ghi: {{ totalCount | number }}</div>
+    </ng-template>
+  </p-table>
+  <!--Paginator-->
+  <p-paginator
+    [rows]="maxResultCount"
+    [totalRecords]="totalCount"
+    (onPageChange)="pageChanged($event)"
+    [rowsPerPageOptions]="[10, 20, 30, 50, 100]"
+  ></p-paginator>
+  <!--Block UI-->
+  <p-blockUI [blocked]="blockedPanel" [target]="pnl"><p-progressSpinner></p-progressSpinner>
+  </p-blockUI>
 </p-panel>
